fix header z-index

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -599,7 +599,7 @@
   &-sticky {
     &-header {
       position: sticky;
-      z-index: @zindex-table-fixed;
+      z-index: @table-sticky-zindex;
     }
     &-scroll {
       position: fixed;
